assets/css/posts.css
.pagez {
    display: inline-block;
    text-align: left;
    width: auto;
}

.sample-post-text {
    text-align: center;
    z-index: -5;
    position: absolute;
    top: 15%;
    line-height: 1.5;
    width: inherit;
}

.sample-post-text p {
    text-align: center;
    font-family: 'Federant', sans-serif;
    width: inherit;
    padding: 12px;
    font-size: 18pt;
}

.post-listing-card {
    position: relative;

    max-width: 300px;
    min-width: 275px;
 
    height: 600px;
    margin: 0px 7px 20px 7px;

    overflow: hidden;
}

.post-listing-card:hover {
    cursor: pointer;
}

.post-listing-card:hover a {
    color: #247ba0;
}

.post-listing-card-top {
    height: 70%;
    width: inherit;
}

.post-listing-card-bottom {
    height: 30%;
    width: inherit;
}

.post-listing-card img {
    border-bottom: solid gray 1px;
    height: 100%;
    margin-bottom: 10px;
    width: 100%;
}

.post-listing-card:hover img {
    animation: shrink-image 1s forwards;
    width: 100%;
}

@media only screen and (max-width: 620px) {
    .post-listing-card:hover img {
        animation: none;
        width: 100%;
    }
    .sample-post-text {
        z-index: 1;
        position: relative;
        width: inherit;
    }
    .sample-post-text p {
        width: inherit;
        padding: 0;
        padding-top: 12px;
        font-size: 12pt;
    }
}

@keyframes shrink-image {
    100% {
        height: 3px; opacity: 0;
    }
}

.post-listing-card h2 {
    margin: 0;
    font-size: 18pt;
    overflow: hidden;
}

.date-posted-stamp {
    padding: 0;
    margin: 5px 0px 10px 0px;
    font-style: oblique;
}

.date-posted-stamp p {
    font-size: 12pt;
}

.posts-header {
    background-image: url('../img/primary/about-me-book-shelf.png');
    background-size: cover;

    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    z-index: 1;
    width: 100%;
    height: 50vh;
    max-height: 1000px;
    min-height: 290px;

    padding: 0;
    margin: auto;

    position: relative;
    text-align: center;
}

.posts-header-title {
    text-align: center;
    position: absolute;
    padding-bottom: 30px;

    bottom: 0;
    left: 0;
    right: 0;
}

.posts-header-title h1 {
    margin: 0;
    font-size: 40pt;
    font-weight: bold;
    color: whitesmoke;
    text-shadow: 3px 3px 1px black;
}

.posts-header-title h2 {
    font-style: oblique;
    font-size: 18pt;
    font-weight: bold;
    color: whitesmoke;
    text-shadow: 2px 2px 1px black;
}

.posts-header-title p {
    color: whitesmoke;
    font-style: oblique;
    font-size: 18pt;
    font-weight: bold;
    text-shadow: 2px 2px 1px black;
}

.featured-posts-title {
    text-align: center;
    padding: 0;
    margin-left: auto;
    margin-right: auto;

    margin-bottom: 35px;

}

.featured-posts-title h1, .featured-posts-title h2 {
    text-align: center;
    padding: 30px;
    margin: auto;
}

